reports/dfn.log
Traceback (most recent call last):
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/anaconda3/envs/py39/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/anaconda3/envs/py39/lib/python3.9/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
]dinput
MyFirstFunction ← {
    ⍝ Add left and right
    ⍺+⍵
}
------------------

[0;36m  File [0;32m"<ipython-input-1-34305c930d89>"[0;36m, line [0;32m1[0m
[0;31m    ]dinput[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unmatched ']'

SyntaxError: unmatched ']' (<ipython-input-1-34305c930d89>, line 1)

